<resources>
    <string name="app_name">AndroidTicTacToe-Tutorial2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="info">informacion</string>
    <string name="difficulty_choose" />
    <string name="difficulty_easy">Fácil</string>
    <string name="difficulty_harder">Medio</string>
    <string name="difficulty_expert">Extremo</string>
    <string name="quit_question">¿Seguro que deseas salir?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="android">Android:</string>
</resources>